--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --white-clr: #fff;
   --blue-light-link: #0067b8;
   --blue-light-link-hover: #005da6;
+  --max-width-container: 1200px;
 }
 
 * {
@@ -31,7 +32,7 @@ ul {
 
 .container {
   width: 90vw;
-  max-width: 1100px;
+  max-width: var(--max-width-container);
   margin: auto;
 }
 
@@ -49,6 +50,11 @@ ul {
 .right-menu {
   display: flex;
   align-items: center;
+}
+
+.right-menu i {
+  font-size: 14px;
+  margin-left: 10px;
 }
 
 .main-nav ul.main-menu {
@@ -231,4 +237,79 @@ ul {
 }
 .follow i.fa-linkedin {
   color: #0177b5;
+}
+
+/* <!-- Links --> */
+.links {
+  background-color: #f2f2f2;
+  font-size: 12px;
+  color: #616161;
+  padding: 35px 0;
+}
+
+.links-inner {
+  max-width: var(--max-width-container);
+  margin: 0 auto;
+  padding: 0 20px;
+
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.links-inner h3 {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.links li {
+  line-height: 2.6;
+}
+
+.links li a:hover {
+  border-bottom: 1px solid #000;
+}
+
+/* <!-- Footer --> */
+.footer {
+  background-color: #f2f2f2;
+  font-size: 12px;
+  color: #616161;
+  display: flex;
+}
+
+.footer-inner {
+  width: 100%;
+  max-width: var(--max-width-container);
+  padding: 0 20px;
+  margin: 30px auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-inner div {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.footer-inner ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-inner li {
+  margin-right: 20px;
+}
+
+.footer-inner i {
+  margin-right: 10px;
+}
+
+.footer-inner li a:hover {
+  border-bottom: 1px solid #000;
 }
